Correciones del PR, removido UserViewComponent para trabajarlo en otro branch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <app-nav
-  [loggedUser]="null"
+  [loggedUser]="setUserOnNav()"
   (clickedPosts)="goToPosts()"
   (clickedProfile)="goToProfile()"
   (clickedLogIn)="goToLogIn()"
