--- a/src/app/user/user-view/user-view.component.html
+++ b/src/app/user/user-view/user-view.component.html
@@ -1,53 +1,54 @@
 <div *ngIf="this.userExists===true">
-  <h2>
-    {{this.model.username}}´s profile
-  </h2>
+  <form [formGroup]="form">
+    <h2>
+      {{form.get('username').value}}´s profile
+    </h2>
 
-  <br /><br />
+    <br /><br />
 
-  <img src={{this.model.pathImg}} class="imgSize">
+    <img src={{model.pathImg}} class="imgSize">
 
-  <br /><br />
+    <br /><br />
 
-  <label>
-    <b>FullName:</b> {{this.model.fullName}}
-  </label>
+    <label>
+      <b>FullName:</b> {{form.get('fullName').value}}
+    </label>
 
-  <br /><br />
+    <br /><br />
 
-  <label>
-    <b>Email:</b> {{this.model.email}}
-  </label>
+    <label>
+      <b>Email:</b> {{form.get('email').value}}
+    </label>
 
-  <br /><br />
+    <br /><br />
 
-  <label>
-    <b>Interests:</b>
-  </label>
-  <mat-chip-list>
-    <mat-chip *ngFor="let element of interests">{{element}}</mat-chip>
-  </mat-chip-list>
+    <label>
+      <b>Interests:</b>
+    </label>
+    <mat-chip-list>
+      <mat-chip *ngFor="let element of interests">{{element}}</mat-chip>
+    </mat-chip-list>
 
-  <br /><br />
+    <br /><br />
 
-  <label>
-    <b>Posts:</b>
-  </label>
-  <ul>
-    <li *ngFor="let post of postsToShow">
-      <h6>{{post.title}}</h6>
-      <br />
-      <label>{{post.body}}</label>
+    <label>
+      <b>Posts:</b>
+    </label>
+    <ul>
+      <li *ngFor="let post of postsToShow">
+        <h6>{{post.title}}</h6>
+        <br />
+        <label>{{post.body}}</label>
 
-    </li>
-  </ul>
+      </li>
+    </ul>
 
-  <div *ngIf="this.isLoggedUser===true">
-    <a [routerLink]="['/users/edit', this.model.id]">
-      <button type="submit">Edit your profile</button>
-    </a>
-  </div>
-
+    <div *ngIf="this.isLoggedUser===true">
+      <a [routerLink]="['/users/edit', this.model.id]">
+        <button type="submit">Edit your profile</button>
+      </a>
+    </div>
+  </form>
 </div>
 
 
